# Embedded

./: CMakeLists.txt  main.c  main2.c  main3.c  main4.c
.cache/clangd/index/: test.c.C2EBED3FB9236AC0.idx
drivers/buzzerDriver/: buzzer.c
drivers/lcdDriver/: lcd.c  lcd.h
drivers/servoDriver/: servo.c  servo.h
freertos/: FreeRTOSConfig.h
freertos/include/: FreeRTOSConfig.h
